--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: MautPlugin
-main: de.example.maut.TollPlugin
+main: de.beispiel.maut.MautPlugin
 version: 1.0
 api-version: 1.20
-depend:
-  - Vault
+depend: [Vault, WorldGuard]
+commands: {}
