--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -1,11 +1,13 @@
 # .github/workflows/build.yml
-name: Build MautPlugin
+name: Build and Release MautPlugin
 
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  release:
+    types: [created]
 
 jobs:
   build:
@@ -25,8 +27,16 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml
 
-      - name: Upload plugin JAR
+      - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: MautPlugin
           path: target/*.jar
+
+      - name: Upload JAR to Release
+        if: github.event_name == 'release'
+        uses: softprops/action-gh-release@v2
+        with:
+          files: target/*.jar
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
